# MeshSimplification

./: CMakeLists.txt  MeshSimplification.sln  README.md
MeshSimpAlg/: MeshSimpAlg.vcxproj  MeshSimpAlg.vcxproj.filters  display.cpp  mesh_simplification.cpp  mesh_simplification.h
freegl/lib/: freeglut.lib  freeglut_static.lib  freeglut_staticd.lib
